Bug 1032460 - Fix getting JNI EGLSurface for Android L. r=blassey, a=sledru